Point error/help messages at the correct soft-wrapped line.
Because we're using soft-wrapped lines, it can be the case that an error
or help message is pointing at a line that is several physical screen
lines down from where the line of code actually starts. Until now,
the messages always pointed at the first physical screen line, which
meant that it sometimes obscured the actual character it was supposed
to be pointing at.

I also made the error/help messages overlap the gutter, in part because
this will make the errors display better on narrow screens, and in part
because this will allow us to actually have the arrow point at the
relevant character in question.

--- a/css/errorhelp.css
+++ b/css/errorhelp.css
@@ -17,10 +17,14 @@ html .flipped .down-arrow {
 .help {
   display: block;
   position: absolute;
-  top: 0px;
-  left: 100px;
   
-  width: 80%;
+  /* Force the left side of the message to be on the left side of the
+   * editing area. CodeMirror.addWidget() will set the left side on the
+   * style attribute of the widget to be where the relevant character is,
+   * and we want to override that. */
+  left: 0px !important;
+
+  width: 97%;
   height: 130px;
   background-color: #FDFDFD;
   border: 5px solid #D6D6D6;
@@ -33,7 +37,11 @@ html .flipped .down-arrow {
   -webkit-box-shadow: 0px 0px 5px 1px #C1C1C1;
   box-shadow: 0px 0px 5px 1px #C1C1C1;
   
-  z-index: 1;
+  z-index: 1000;
+  
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .error p {
